@@ -14,6 +14,7 @@ Bug fixes
 
 - Changing variable appearing in "source" statement of a base template
   from the derived target now works as expected.
+- Respect default value of "AdditionalIncludeDirectories" in MSVS projects.
 - Simplify paths involving $(builddir) in the "gnu" toolset output.
 - Generate correct warning options for "suncc" backend.
 - Fix linking shared libraries with Sun toolset, use "-lc" explicitly.
